--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
+{% extends 'blog/base.html' %}
 
-      <div>
-          <h1><a href="/">Django Girls Blog</a></h1>
-      </div>
-
-      {% for post in posts %}
-          <div>
-              <p>published: {{ post.published_date }}</p>
-              <h1><a href="">{{ post.title }}</a></h1>
-              <p>{{ post.text|linebreaksbr }}</p>
+{% block content %}
+  {% for post in posts %}
+      <div class="post">
+          <div class="date">
+              {{ post.published_date }}
           </div>
-      {% endfor %}
-
-    </body>
-</html>
-We've created three div sections here.
+          <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+          <p>{{ post.text|linebreaksbr }}</p>
+      </div>
+  {% endfor %}
+{% endblock %}
